<resources>
    <string name="app_name">MyGuitarProject</string>
    <string name="username">Username:</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email:</string>
    <string name="phone_number">Phone:</string>
    <string name="mnuhome">Home</string>
    <string name="mnuCart">Cart</string>
    <string name="accountSetting">Setting</string>
    <string name="logout">Logout</string>
    <string name="posobility">Posibility</string>
    <string name="cancel">Cancel</string>
    <string name="favorite">Favorite</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="addtocart">Add To Cart</string>
    <string name="continuebuy">Back To Buy</string>
    <string name="delete">Delete</string>
    <string name="payment">Payment</string>
    <string name="contact">Contact</string>
    <string name="fullname">Fullname</string>
    <string name="phonenumber">Phone Number</string>
    <string name="address">Address</string>
    <string name="confirmPassword">Confirm</string>
    <string name="textConfirmPassword">Để bảo mật tài khoản, đề nghị nhập password hiện tại của tài khoản quý khách. Xin cảm ơn!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="changePass">Change Password</string>
    <string name="newPass">New Password</string>
    <string name="confirmNewPass">Confirm New Passord</string>
    <string name="changePhoneNumber">Change Phone Number</string>
    <string name="newPhoneNumber">New Phone Number</string>
    <string name="discount">Discount Product</string>
    <string name="search">Search</string>
    <string name="newProduct">New Product</string>
    <string name="bestsellingproduct">Best Selling Product</string>
    <string name="orderstatus">Order Status</string>
    <string name="backtohome">Back</string>
    <string name="manager">Manager</string>
    <string name="listProduct">List Product</string>
    <string name="addNewProduct">Add new Product</string>
    <string name="editProduct">Edit</string>
    <string name="addProduct">Add Product</string>
    <string name="nameProduct">Name Product</string>
    <string name="priceProduct">Price Product</string>
    <string name="imgProduct">Image Product</string>
    <string name="description">Description</string>
    <string name="idCategory">ID Category</string>
    <string name="selectImg">Select Image</string>
    <string name="statistic">Statistic</string>
    <string name="backtoadmin">Back To Admin</string>
    <string name="editProductActivity">Edit Product</string>
</resources>