<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_white_24"
            android:title="@string/mnuhome" />
        <item
            android:id="@+id/nav_posibility"
            android:icon="@drawable/baseline_history_white_24"
            android:title="@string/posobility" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/baseline_shopping_cart_white_24"
            android:title="@string/mnuCart" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/outline_search_white_24"
            android:title="@string/search" />
    </group>
    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/orderstatus"
                android:icon="@drawable/baseline_history_white_24"
                android:title="@string/orderstatus" />
            <item
                android:id="@+id/setting"
                android:icon="@drawable/baseline_admin_panel_settings_white_24"
                android:title="@string/accountSetting" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/baseline_manage_accounts_white_24"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>