<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearButton"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/editProductActivity"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameProduct"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtEditNameProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nameProduct"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priceProduct"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtEditPriceProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/priceProduct"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imgProduct"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imgEditProduct"
                android:layout_width="80dp"
                android:layout_height="80dp" />

            <Button
                android:id="@+id/btnEditSelectImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/selectImg"
                android:textSize="18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtEditDescriptionProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtEditDiscount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/discount"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/idCategory"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinEditIdCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEditBackToAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/backtoadmin" />

        <Button
            android:id="@+id/btnEditProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/editProduct"
            android:textSize="20dp" />

    </LinearLayout>


</RelativeLayout>