<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearAdd"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/addProduct"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameProduct"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtNameProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nameProduct"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priceProduct"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtPriceProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/priceProduct"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imgProduct"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imgNewProduct1"
                android:layout_width="80dp"
                android:layout_height="80dp" />

            <Button
                android:id="@+id/btnSelectImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/selectImg"
                android:textSize="18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtDescriptionProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtdiscount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/discount"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/idCategory"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinIdCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/linearAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBackToAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/backtoadmin" />

        <Button
            android:id="@+id/btnAddProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/addProduct"
            android:textSize="20dp" />

    </LinearLayout>


</RelativeLayout>