<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PaymentActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:id="@+id/edtFullname"
            android:textSize="18dp"
            android:textColor="@color/black"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phonenumber"
            android:id="@+id/edtPhoneNumber"
            android:textSize="18dp"
            android:textColor="@color/black"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:id="@+id/edtAddress"
            android:textSize="18dp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:id="@+id/rcvPayment"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tổng: "
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPricePayment"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="10dp"/>
    </LinearLayout>
    <Button
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:id="@+id/btnPayment"/>
</LinearLayout>