<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvListProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/listProduct"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvListProductAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn"
        android:layout_below="@+id/tvListProduct"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBackToHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/backtohome"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnAddProductActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/addProduct"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnStatistic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistic"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>